# lab8

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README.md~  main.c
client/: client.c  client.c~
html/: annotated.html  classes.html  clientList_8h.html  clientList_8h_source.html  dir_03ee71a824a2956855710d37c6dfe299.html  dir_367e22fcf9878acad9448d588b9e6332.html  dir_5258d300f4021ff138683d031b84f03f.html  dir_5566224caa2cb4386e2b2af9c2e1eeff.html  dir_73302af8fcc52d1b5ec267c4593c3d65.html  dir_7b89a6349dd19956bf96a57d4e664c4d.html  dir_8138befc17122d176de66081097fcd9c.html  dir_9d3135bea413a24f544e0ae4cd0e8fac.html  dir_a6ce52151fba623c2bbffd1d7e086bcb.html  dir_b7c7d310e82f8d21ad4e03b2b6375458.html  dir_b86f1e01a62fed90304f44d97db675f9.html  dir_ba8c0a1a9240b6d9963c5ed1f1e02139.html  dir_c2c5194d2f82b8ee5de8aecb3cd3cd84.html  dir_daae96877a16400ff97a3154c13e3ac0.html  dir_f71a6b5764e35008d0326d4823e0f944.html  dir_fe8831e2c9943885d6c5366c824e5aba.html  files.html  globals.html  globals_func.html  index.html  response_8h.html  response_8h_source.html  structList.html  structSongs-members.html  structSongs.html
include/: clientList.h  response.h
latex/: annotated.tex  clientList_8h.tex  dir_03ee71a824a2956855710d37c6dfe299.tex  dir_367e22fcf9878acad9448d588b9e6332.tex  dir_5258d300f4021ff138683d031b84f03f.tex  dir_5566224caa2cb4386e2b2af9c2e1eeff.tex  dir_73302af8fcc52d1b5ec267c4593c3d65.tex  dir_7b89a6349dd19956bf96a57d4e664c4d.tex  dir_8138befc17122d176de66081097fcd9c.tex  dir_9d3135bea413a24f544e0ae4cd0e8fac.tex  dir_a6ce52151fba623c2bbffd1d7e086bcb.tex  (+12 more)
(+15 files in other folders)
